# bankroll-sim

./: ACHIEVEMENT_NOTES.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
docs/: EXAMPLES_20260709.md  USAGE.md
src/bankroll_sim/: __init__.py  __main__.py  cli.py  sim.py
tests/: test_growth_factor.py  test_growth_is_ruined.py  test_max_dd_path.py  test_median_final.py  test_percentile_final.py  test_ruin.py  test_sim.py  test_version.py
