[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bankroll-sim"
version = "0.1.0"
description = "Bankroll path simulation: flat, proportional, Kelly, ruin risk"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["data-science", "education", "cli"]
license = { text = "MIT" }
authors = [{ name = "tapheret2" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
bankroll-sim = "bankroll_sim.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
